Added alert to demo

--- a/menu.html
+++ b/menu.html
@@ -299,6 +299,11 @@
 			</div>
 
 		<!-- Scripts -->
+			<script>
+				window.onload = function() {
+					window.alert("Note, since this is a demo, the 'add to cart' functionality does not work")
+				}
+			</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
