Fixed links and added missing images

--- a/catering.html
+++ b/catering.html
@@ -31,7 +31,7 @@
 						<p>Elit massa nisl elementum lorem ipsum dolor sit consequat</p>
 					</header>
 					<div class="image main">
-						<img src="images/pic01.jpg" alt="" />
+						<img src="images/catering.jpg" alt="Man standing beside a coffee brew" />
 					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin scelerisque vehicula eros at condimentum. Pellentesque massa nisl, elementum id mi sed, aliquam gravida diam. Donec condimentum eros magna, ut convallis nunc lacinia ac. Sed pellentesque ante nec pharetra facilisis. Nullam sagittis ullamcorper feugiat. Maecenas sollicitudin tincidunt convallis. Suspendisse vel arcu vitae quam pretium interdum. Sed id felis id enim maximus rutrum quis vitae mauris. Nulla facilisi. Integer pharetra mi diam, at viverra neque tristique vitae. Nunc interdum ipsum porta suscipit sagittis. Nam tempor eros non lorem consequat, vel euismod mi hendrerit. Ut suscipit lacus varius risus finibus faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
 					<p>Curabitur facilisis luctus cursus. In ultrices ultrices ante, efficitur efficitur velit maximus blandit. Donec finibus ultrices arcu id scelerisque. Pellentesque ante lectus, feugiat ut sodales nec, faucibus sed nisi. In ornare ultricies euismod. Aenean vehicula velit orci, non mattis dui aliquam at. Nullam a ipsum eu orci hendrerit viverra. Curabitur justo odio, tristique nec ligula sed, tristique auctor mi.</p>
@@ -45,21 +45,21 @@
 				</header>
 				<ul class="features">
 					<li>
-						<img src="images/pic06.jpg" alt="" />
+						<img src="images/private.jpg" alt="Finger food on skewers" />
 						<h3>Private Catering Choices</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						Phasellus hendrerit, nulla vitae faucibus posuere, est libero
 						feugiat lacus.</p>
 					</li>
 					<li>
-						<img src="images/pic06.jpg" alt="" />
+						<img src="images/event.jpg" alt="Food in fancy metal trays" />
 						<h3>Event Catering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						Phasellus hendrerit, nulla vitae faucibus posuere, est libero
 						feugiat lacus.</p>
 					</li>
 					<li>
-						<img src="images/pic06.jpg" alt="" />
+						<img src="images/wedding.jpg" alt="Tables lined with white linen and set with white napkins" />
 						<h3>Weddings</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						Phasellus hendrerit, nulla vitae faucibus posuere, est libero
