--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<p>With over 50 dishes ante et vulputate volutpat pede semper est, vitae luctus metus libero eu augue. See our full menu or view our special offers</p>
 								</header>
 								<ul class="actions">
-									<li><a href="#" class="button">Order Online</a></li>
+									<li><a href="menu.html" class="button">Order Online</a></li>
 								</ul>
 							</div>
 							<div class="spotlight">
@@ -85,9 +85,9 @@
 							<img src="images/man-working.jpg" alt="Employee making a drink" />
 						</div>
 						<p class="special">Sed egestas, ante et vulputate volutpat pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum lorem ipsum dolor sit amet consequat hendrerit tortor semper lorem at felis.</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">More</a></li>
-						</ul>
+						</ul> -->
 					</div>
 				</div>
 			</div>
